--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,25 +23,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      - uses: pnpm/action-setup@v2 # pnpm is optional but recommended, you can also use npm / yarn
-        with:
-          version: 6
+          fetch-depth: 0
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+          cache: npm
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Build with Rspress
-        run: |
-          pnpm run build
+        run: npm run build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
+          name: doc_build
           path: doc_build
 
   # Deployment job
@@ -53,6 +48,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: JamesIves/github-pages-deploy-action@4
+        with:
+          branch: gh-pages
+          folder: doc_build
+          cleanup: false
